Add process structure and injector functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(spritzenschwurbler_c C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(spritzenschwurbler_c src/main.c)
+add_executable(spritzenschwurbler_c src/main.c src/utils/injector.c src/utils/injector.h src/utils/process_t.h)
